--- a/B-Counter/MainWindow.xaml
+++ b/B-Counter/MainWindow.xaml
@@ -19,7 +19,7 @@
         </StackPanel>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Orientation="Horizontal">
             <Button x:Name="button_export" Content="Export" Width="75"/>
-            <Button x:Name="button_import" Content="Import" Width="75" Click="button_import_Click"/>
+            <Button x:Name="button_import" Content="Import" Width="75" />
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -29,47 +29,53 @@
             <DataGrid x:Name="dataGrid_result" 
                   ItemsSource="{Binding Path=FileInfoList, Mode=OneWay}"
                   AutoGenerateColumns="False"
-                  Margin="5" IsReadOnly="True" LoadingRow="dataGrid_result_LoadingRow" HorizontalGridLinesBrush="#FFE4E4E4" VerticalGridLinesBrush="#FFF7F7F7" RowHeight="22" SelectedCellsChanged="dataGrid_result_SelectedCellsChanged" PreviewKeyDown="dataGrid_result_PreviewKeyDown" >
+                  Margin="5" LoadingRow="dataGrid_result_LoadingRow" HorizontalGridLinesBrush="#FFE4E4E4" VerticalGridLinesBrush="#FFF7F7F7" RowHeight="22" SelectedCellsChanged="dataGrid_result_SelectedCellsChanged" PreviewKeyDown="dataGrid_result_PreviewKeyDown" SelectionUnit="FullRow"  CanUserAddRows="False"  >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Path=FileName, Mode=OneWay}"   Header="ファイル名"/>
-                    <DataGridTextColumn Binding="{Binding Path=FileSize, Mode=OneWay, StringFormat={}{0:#,0} }" Header="サイズ">
+                    <DataGridCheckBoxColumn Binding="{Binding IsSelcted, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ClipboardContentBinding="{x:Null}" Header="選択" IsReadOnly="False" >
+                        <DataGridCheckBoxColumn.CellStyle>
+                            <Style>
+                                <EventSetter Event="CheckBox.Checked" Handler="OnChecked"/>
+                            </Style>
+                        </DataGridCheckBoxColumn.CellStyle>
+                    </DataGridCheckBoxColumn>
+                    <DataGridTextColumn Binding="{Binding FileName, Mode=OneWay}"   Header="ファイル名" IsReadOnly="True"/>
+                    <DataGridTextColumn Binding="{Binding FileSize, Mode=OneWay, StringFormat=\{0:#\,0\}}" Header="サイズ" IsReadOnly="True">
                         <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                            <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Path=Text.Length, Mode=OneWay, StringFormat={}{0:#,0} }" Header="文字数(空白込)">
+                    <DataGridTextColumn Binding="{Binding Text.Length, Mode=OneWay, StringFormat=\{0:#\,0\}}" Header="文字数(空白込)" IsReadOnly="True">
                         <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                            <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    
-                    <DataGridTextColumn Binding="{Binding Path=Text.Characters, Mode=OneWay, StringFormat={}{0:#,0} }" Header="文字数(空白抜)">
+
+                    <DataGridTextColumn Binding="{Binding Text.Characters, Mode=OneWay, StringFormat=\{0:#\,0\}}" Header="文字数(空白抜)" IsReadOnly="True">
                         <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                            <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Path=Text.Words, Mode=OneWay, StringFormat={}{0:#,0} }" Header="ワード数">
+                    <DataGridTextColumn Binding="{Binding Text.Words, Mode=OneWay, StringFormat=\{0:#\,0\}}" Header="ワード数" IsReadOnly="True">
                         <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                            <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Path=Text.FullBytes, Mode=OneWay, StringFormat={}{0:#,0} }" Header="全角文字数">
+                    <DataGridTextColumn Binding="{Binding Text.FullBytes, Mode=OneWay, StringFormat=\{0:#\,0\}}" Header="全角文字数" IsReadOnly="True">
                         <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                            <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Binding="{Binding Path=Text.InnerText, Mode=OneWay}" Header="テキスト" Visibility="Collapsed">
-                    </DataGridTextColumn>
+                    <!--<DataGridTextColumn Binding="{Binding Text.InnerText, Mode=OneWay}" Header="テキスト" IsReadOnly="True" Visibility="Collapsed"/>-->
                 </DataGrid.Columns>
                 <DataGrid.CellStyle>
                     <Style TargetType="DataGridCell">
@@ -125,6 +131,34 @@
                         </TextBox>
                         <Button x:Name="button" Content="Copy To Clipboard" Click="button_CopyToClipBoard_Click"/>
 
+                    </StackPanel>
+                </GroupBox>
+                <GroupBox Header="選択">
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
+                            <Label Width="90" HorizontalContentAlignment="Right">ファイル数</Label>
+                            <RichTextBox x:Name="rich_SelectedCount" Width="100" IsReadOnly="True" ></RichTextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
+                            <Label Width="90" HorizontalContentAlignment="Right">サイズ</Label>
+                            <RichTextBox x:Name="rich_SelectedSize" Width="100" IsReadOnly="True" ></RichTextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
+                            <Label Width="90" HorizontalContentAlignment="Right">文字数(空白込)</Label>
+                            <RichTextBox x:Name="rich_SelectedLengh" Width="100" IsReadOnly="True" ></RichTextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
+                            <Label Width="90" HorizontalContentAlignment="Right">文字数(空白抜)</Label>
+                            <RichTextBox x:Name="rich_SelectedCharacter" Width="100" IsReadOnly="True" ></RichTextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
+                            <Label Width="90" HorizontalContentAlignment="Right">ワード数</Label>
+                            <RichTextBox x:Name="rich_SelectedWords" Width="100" IsReadOnly="True" ></RichTextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
+                            <Label Width="90" HorizontalContentAlignment="Right">全角文字数</Label>
+                            <RichTextBox x:Name="rich_SelectedFullBytes" Width="100" IsReadOnly="True" ></RichTextBox>
+                        </StackPanel>
                     </StackPanel>
                 </GroupBox>
             </StackPanel>
